// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LikeC4ModelBuilder > builds model 1`] = `
{
  "elements": {
    "client": {
      "id": "client",
      "kind": "user",
      "shape": "rectangle",
      "title": "client",
    },
    "system": {
      "id": "system",
      "kind": "component",
      "shape": "rectangle",
      "title": "system",
    },
    "system.backend": {
      "id": "system.backend",
      "kind": "component",
      "shape": "rectangle",
      "title": "Backend",
    },
    "system.frontend": {
      "id": "system.frontend",
      "kind": "component",
      "shape": "rectangle",
      "tags": [
        "deprecated",
      ],
      "title": "frontend",
    },
  },
  "relations": {
    "46b9e42890c694d2bba5a0d1ca68e0db22edbe56": {
      "id": "46b9e42890c694d2bba5a0d1ca68e0db22edbe56",
      "source": "client",
      "target": "system.frontend",
      "title": "",
    },
    "b11f56fbd6b4b02deb138bf959e35c0dfe061ecd": {
      "id": "b11f56fbd6b4b02deb138bf959e35c0dfe061ecd",
      "source": "system.frontend",
      "target": "system.backend",
      "title": "requests",
    },
  },
}
`;

exports[`LikeC4ModelBuilder > builds model with extend 1`] = `
{
  "elements": {
    "client": {
      "id": "client",
      "kind": "user",
      "shape": "rectangle",
      "title": "client",
    },
    "system": {
      "id": "system",
      "kind": "component",
      "shape": "rectangle",
      "title": "system",
    },
    "system.backend": {
      "id": "system.backend",
      "kind": "component",
      "shape": "rectangle",
      "title": "Backend",
    },
    "system.backend.api": {
      "id": "system.backend.api",
      "kind": "component",
      "shape": "rectangle",
      "title": "api",
    },
    "system.frontend": {
      "id": "system.frontend",
      "kind": "component",
      "shape": "rectangle",
      "tags": [
        "deprecated",
      ],
      "title": "frontend",
    },
  },
  "relations": {
    "1ac9195843081750e2aabdb657a4727c1a9c18f3": {
      "id": "1ac9195843081750e2aabdb657a4727c1a9c18f3",
      "source": "system.frontend",
      "target": "system.backend.api",
      "title": "",
    },
    "243ec225564cf9a9bdc936707f989434385fc862": {
      "id": "243ec225564cf9a9bdc936707f989434385fc862",
      "source": "client",
      "target": "system.frontend",
      "title": "",
    },
    "b11f56fbd6b4b02deb138bf959e35c0dfe061ecd": {
      "id": "b11f56fbd6b4b02deb138bf959e35c0dfe061ecd",
      "source": "system.frontend",
      "target": "system.backend",
      "title": "requests",
    },
  },
}
`;
